[package]
name = "edge-core"
version = "0.1.0"
authors = ["zifeng <zifeng.1024@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
tonic = "0.3"
prost = "0.6"
rumqttc = "0.2.0"
edge-model = { version = "0.1.0", path = "../edge-model" }
