[package]
name = "edge-core"
version = "0.1.0"
authors = ["zifeng <zifeng.1024@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
tokio = { version = "1.5.0", features = ["full"] }
tonic = "0.4.2"
prost = "0.7.0"
rumqttc = "0.5.0"
rusqlite = { version = "0.25.1", features = ["bundled"] }
zmq = { version = "0.9.2", features = ["vendored"] }
edge-model = { version = "0.1.0", path = "../edge-model" }
