[package]
name = "edge-core"
version = "0.1.0"
authors = ["zifeng <zifeng.1024@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
tokio = { version = "1.6.0", features = ["full"] }
tonic = "0.4.2"
prost = "0.7.0"
rusqlite = { version = "0.25.1", features = ["bundled"] }
zmq = { version = "0.9.2", features = ["vendored"] }
rumqttc = "0.6.0"
log = "0.4.14"
log4rs = "1.0.0"
edge-model = { path = "../edge-model" }
mqtt-server = { path = "components/mqtt-server", optional = true }

[features]
default = ["edge-mqtt"]
edge-mqtt = ["mqtt-server"]
opa-ua = []
modbus-server = []
streaming = []

