[package]
name = "edge-hub"
version = "0.1.0"
authors = ["zifeng <zifeng.1024@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
tokio = { version = "1.6.0", features = ["full"] }
zmq = { version = "0.9.2", features = ["vendored"] }
rmp = "0.8"
pulsar = "3.0"
rdkafka = { version = "0.25", features = ["cmake-build"] }
clap = "3.0.0-beta.2"
log = "0.4.14"
log4rs = "1.0.0"