[package]
name = "edge-let"
version = "0.1.0"
authors = ["zifeng <zifeng.1024@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.20.0"
anyhow = "1.0.33"
tokio = { version = "0.3", features = ["full"] }
